--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Already have a website & needing something you can't figure out? I Specializing in crafting tailor-made e-commerce websites, perfectly customized to meet your unique business requirements & can help you with any bugs you may be experiencing. Request a web ticket & explain your issue here.  <a class="link-underline" href="https://dz49.co/contact-us">CLICK HERE TO START NOW</a>
+                                                        Already have a website? Or needing to make changes? I Specializing in crafting tailor-made websites, perfectly customized to meet your unique requirements. Request a web ticket & explain your needs.  <a class="link-underline" href="mailto:ask@dz49.com">CLICK HERE TO START NOW</a>
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
