--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
                         navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-collapse">
-                    <div class="top-right-text">
-                       DZ49'S PORTFOLIO OF PROJECTS & SERVICES
-                   </div>
+                        <!-- menu start -->
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a class="link-underline-menu active" href="#home">SUBSCRIBE NOW & LOCK IN A LOW MONTHLY RATE</a>
+                            </li>
+                        </ul><!-- menu end -->
                     </div>
                 </div><!-- main navigation end -->
             </div><!-- container end -->
