--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                                     <!-- divider start -->
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
-                                                    <p> $150 startup fee + $25 a month!<p/>
+                                                    <p> One time $150 startup fee, then only $25/month!<p/>
                                                     <div id="paypal-button-container-P-93W19093VB403145GM6N6HZY"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=ATSlZ_s5NDMSbPeJ2GdRSwt_HD7iQ-no1GJCiDPHrvNVVXGBl6gGtARA-hgZSJYngsYH-7oj8hghcutb&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
 <script>
