--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                                                     <!-- divider start -->
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
-                                                    <p> One time $150 startup fee, then only $25/<a href="#services">month!</a><p/>
-                                                        <a class="link-underline-menu" href="#services">Services</a>
+                                                    <p> One time $150 startup fee, then only $25/<a href="#works">month!</a><p/>
                                                     <div id="paypal-button-container-P-93W19093VB403145GM6N6HZY"></div>
 <script src="https://www.paypal.com/sdk/js?client-id=ATSlZ_s5NDMSbPeJ2GdRSwt_HD7iQ-no1GJCiDPHrvNVVXGBl6gGtARA-hgZSJYngsYH-7oj8hghcutb&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
 <script>
