--- a/teste.html
+++ b/teste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location and Time Form</title>
+    <title>Location and Time Form with Pay by Cash</title>
     <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Flatpickr CSS for time picker -->
@@ -50,19 +50,34 @@
             content: " *";
             color: red;
         }
+        /* Button group styling */
+        .button-group {
+            display: flex;
+            justify-content: center;
+            gap: 15px; /* Space between buttons */
+            flex-wrap: wrap; /* Wrap buttons on small screens */
+        }
+        .btn-pay-cash {
+            background-color: #28a745; /* Green color for cash option */
+            border-color: #28a745;
+        }
+        .btn-pay-cash:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
     </style>
 </head>
 <body>
     <div class="form-container">
         <h2 class="text-center mb-4">Reservation Form</h2>
         <form>
-            <!-- Check In Date Field (for context) -->
+            <!-- Check In Date Field -->
             <div class="form-group">
                 <label for="checkin_date">Check In Date</label>
                 <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
             </div>
 
-            <!-- Replaced Check Out Date with Required Location Field -->
+            <!-- Location Field (Required) -->
             <div class="form-group">
                 <label for="location" class="required">Location</label>
                 <input type="text" id="location" name="location" class="form-control" placeholder="Enter location" required>
@@ -74,15 +89,16 @@
                 <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
             </div>
 
-            <!-- Added Phone Number Field -->
+            <!-- Phone Number Field -->
             <div class="form-group">
                 <label for="phone_number">Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
             </div>
 
-            <!-- Submit Button -->
-            <div class="form-group text-center">
+            <!-- Button Group with Submit and Pay by Cash -->
+            <div class="button-group mt-4">
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="#" class="btn btn-pay-cash text-white">Pay by Cash</a>
             </div>
         </form>
     </div>
@@ -90,4 +106,37 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script>
+        $(document).ready(function() {
+            // Initialize Flatpickr for Check In Date
+            $("#checkin_date").flatpickr({
+                dateFormat: "Y-m-d", // e.g., 2025-02-22
+                minDate: "today" // Prevents past dates
+            });
+
+            // Initialize Flatpickr for Check Out Time
+            $("#checkout_time").flatpickr({
+                enableTime: true,
+                noCalendar: true,
+                dateFormat: "H:i", // 24-hour format, e.g., 14:30
+                time_24hr: true
+            });
+
+            // Form submission handler for testing
+            $("form").on("submit", function(e) {
+                e.preventDefault(); // Prevent actual submission
+                console.log({
+                    checkin_date: $("#checkin_date").val(),
+                    location: $("#location").val(),
+                    checkout_time: $("#checkout_time").val(),
+                    phone_number: $("#phone_number").val()
+                });
+                alert("Form submitted! Check console for values.");
+            });
+        });
+    </script>
+</body>
+</html>
