--- a/teste.html
+++ b/teste.html
@@ -69,35 +69,35 @@
 </head>
 <body>
     <div class="form-container">
-        <h2 class="text-center mb-4">Reservation Form</h2>
+        <h2 class="text-center mb-4">Socorro Car Wash Form</h2>
         <form>
             <!-- Check In Date Field -->
             <div class="form-group">
-                <label for="checkin_date">Check In Date</label>
+                <label for="checkin_date">Car Wash Date</label>
                 <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
             </div>
 
             <!-- Location Field (Required) -->
             <div class="form-group">
-                <label for="location" class="required">Location</label>
+                <label for="location" class="required">Car Wash Location</label>
                 <input type="text" id="location" name="location" class="form-control" placeholder="Enter location" required>
             </div>
 
             <!-- Check Out Time Field -->
             <div class="form-group">
-                <label for="checkout_time">Check Out Time</label>
+                <label for="checkout_time">Car Wash Time</label>
                 <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
             </div>
 
             <!-- Phone Number Field -->
             <div class="form-group">
-                <label for="phone_number">Phone Number</label>
+                <label for="phone_number">Your Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
             </div>
 
             <!-- Button Group with Submit and Pay by Cash -->
             <div class="button-group mt-4">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Debit/Credit Card</button>
                 <a href="#" class="btn btn-pay-cash text-white">Pay by Cash</a>
             </div>
         </form>
