--- a/teste.html
+++ b/teste.html
@@ -97,7 +97,12 @@
 
             <!-- Button Group with Submit and Pay by Cash -->
             <div class="button-group mt-4">
-                <button type="submit" class="btn btn-primary">Debit/Credit Card</button>
+<style>.pp-HN6B2Z3A5W4FL{text-align:center;border:none;border-radius:1.5rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+<form action="https://www.paypal.com/ncp/payment/HN6B2Z3A5W4FL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+  <input class="pp-HN6B2Z3A5W4FL" type="submit" value="Pay Now" />
+  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+  <section> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+</form>
                 <a href="#" class="btn btn-pay-cash text-white">Pay by Cash</a>
             </div>
         </form>
