--- a/teste.html
+++ b/teste.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location and Time Form with Pay by Cash</title>
+    <title>Location and Time Form with PayPal</title>
     <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Flatpickr CSS for time picker -->
@@ -28,7 +29,6 @@
             font-weight: 600;
             margin-bottom: 0.5rem;
         }
-        /* Custom styling for Flatpickr */
         .flatpickr-input {
             width: 100%;
             padding: 0.375rem 0.75rem;
@@ -45,66 +45,63 @@
             outline: 0;
             box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
         }
-        /* Required field indicator */
         .required::after {
             content: " *";
             color: red;
         }
-        /* Button group styling */
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 15px; /* Space between buttons */
-            flex-wrap: wrap; /* Wrap buttons on small screens */
+            gap: 15px;
+            flex-wrap: wrap;
         }
-        .btn-pay-cash {
-            background-color: #28a745; /* Green color for cash option */
-            border-color: #28a745;
-        }
-        .btn-pay-cash:hover {
-            background-color: #218838;
-            border-color: #1e7e34;
+        /* PayPal button styling from your code */
+        .pp-HN6B2Z3A5W4FL {
+            text-align: center;
+            border: none;
+            border-radius: 1.5rem;
+            min-width: 11.625rem;
+            padding: 0 2rem;
+            height: 2.625rem;
+            font-weight: bold;
+            background-color: #FFD140;
+            color: #000000;
+            font-family: "Helvetica Neue", Arial, sans-serif;
+            font-size: 1rem;
+            line-height: 1.25rem;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="form-container">
-        <h2 class="text-center mb-4">Socorro Car Wash Form</h2>
-        <form>
-            <!-- Check In Date Field -->
+        <h2 class="text-center mb-4">Reservation Form</h2>
+        <!-- Form with your specified action -->
+        <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6">
             <div class="form-group">
-                <label for="checkin_date">Car Wash Date</label>
+                <label for="checkin_date">Check In Date</label>
                 <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
             </div>
-
-            <!-- Location Field (Required) -->
             <div class="form-group">
-                <label for="location" class="required">Car Wash Location</label>
+                <label for="location" class="required">Location</label>
                 <input type="text" id="location" name="location" class="form-control" placeholder="Enter location" required>
             </div>
-
-            <!-- Check Out Time Field -->
             <div class="form-group">
-                <label for="checkout_time">Car Wash Time</label>
+                <label for="checkout_time">Check Out Time</label>
                 <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
             </div>
-
-            <!-- Phone Number Field -->
             <div class="form-group">
-                <label for="phone_number">Your Phone Number</label>
+                <label for="phone_number">Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
             </div>
-
-            <!-- Button Group with Submit and Pay by Cash -->
             <div class="button-group mt-4">
-<style>.pp-HN6B2Z3A5W4FL{text-align:center;border:none;border-radius:1.5rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-  <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6">
-  <form action="https://www.paypal.com/ncp/payment/HN6B2Z3A5W4FL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-  <input class="pp-HN6B2Z3A5W4FL" type="submit" value="Pay Now" />
-  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-  <section> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-</form>
-                <a href="#" class="btn btn-pay-cash text-white">Pay by Cash</a>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <!-- PayPal form for Pay by Cash -->
+                <form action="https://www.paypal.com/ncp/payment/HN6B2Z3A5W4FL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+                    <input class="pp-HN6B2Z3A5W4FL" type="submit" value="Pay by Cash" />
+                    <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+                    <section>Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
+                </form>
             </div>
         </form>
     </div>
@@ -117,32 +114,20 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
         $(document).ready(function() {
-            // Initialize Flatpickr for Check In Date
             $("#checkin_date").flatpickr({
-                dateFormat: "Y-m-d", // e.g., 2025-02-22
-                minDate: "today" // Prevents past dates
+                dateFormat: "Y-m-d",
+                minDate: "today"
             });
-
-            // Initialize Flatpickr for Check Out Time
             $("#checkout_time").flatpickr({
                 enableTime: true,
                 noCalendar: true,
-                dateFormat: "H:i", // 24-hour format, e.g., 14:30
+                dateFormat: "H:i",
                 time_24hr: true
             });
-
-            // Form submission handler for testing
-            $("form").on("submit", function(e) {
-                e.preventDefault(); // Prevent actual submission
-                console.log({
-                    checkin_date: $("#checkin_date").val(),
-                    location: $("#location").val(),
-                    checkout_time: $("#checkout_time").val(),
-                    phone_number: $("#phone_number").val()
-                });
-                alert("Form submitted! Check console for values.");
-            });
+            // No submit handler; form submits to the specified action
         });
     </script>
+</body>
+</html>
 </body>
 </html>
