--- a/teste.html
+++ b/teste.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location and Time Form with PayPal</title>
+    <title>Location and Time Form with Pay by Cash Link</title>
     <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Flatpickr CSS for time picker -->
@@ -55,7 +54,7 @@
             gap: 15px;
             flex-wrap: wrap;
         }
-        /* PayPal button styling from your code */
+        /* Pay by Cash button styling */
         .pp-HN6B2Z3A5W4FL {
             text-align: center;
             border: none;
@@ -70,13 +69,20 @@
             font-size: 1rem;
             line-height: 1.25rem;
             cursor: pointer;
+            display: inline-flex; /* Ensures text centering */
+            align-items: center; /* Vertically centers text */
+            justify-content: center; /* Horizontally centers text */
+            text-decoration: none; /* Removes underline from link */
+        }
+        .pp-HN6B2Z3A5W4FL:hover {
+            background-color: #e6b800; /* Slightly darker yellow on hover */
+            color: #000000;
         }
     </style>
 </head>
 <body>
     <div class="form-container">
         <h2 class="text-center mb-4">Reservation Form</h2>
-        <!-- Form with your specified action -->
         <form method="post" action="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5">
             <div class="form-group">
                 <label for="checkin_date">Check In Date</label>
@@ -96,12 +102,8 @@
             </div>
             <div class="button-group mt-4">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <!-- PayPal form for Pay by Cash -->
-                <form action="https://www.paypal.com/ncp/payment/HN6B2Z3A5W4FL" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-                    <input class="pp-HN6B2Z3A5W4FL" type="submit" value="Pay by Cash" />
-                    <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
-                    <section>Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></section>
-                </form>
+                <!-- Pay by Cash as a link -->
+                <a href="#" class="pp-HN6B2Z3A5W4FL">Pay by Cash</a>
             </div>
         </form>
     </div>
@@ -127,7 +129,5 @@
             // No submit handler; form submits to the specified action
         });
     </script>
-</body>
-</html>
 </body>
 </html>
