--- a/teste.html
+++ b/teste.html
@@ -106,8 +106,9 @@
                 <a href="#" class="pp-HN6B2Z3A5W4FL">Pay by Cash</a>
             </div>
         </form>
-        <img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
-        <section>Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" />
+        <br>
+        <center><img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
+        <section>Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></center>
     </div>
 
     <!-- jQuery -->
