--- a/teste.html
+++ b/teste.html
@@ -82,28 +82,28 @@
 </head>
 <body>
     <div class="form-container">
-        <h2 class="text-center mb-4">Reservation Form</h2>
+        <h2 class="text-center mb-4">Socorro Car Wash Form</h2>
         <form method="post" action="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5">
             <div class="form-group">
-                <label for="checkin_date">Check In Date</label>
+                <label for="checkin_date">Car Wash Date</label>
                 <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
             </div>
             <div class="form-group">
-                <label for="location" class="required">Location</label>
+                <label for="location" class="required">Car Wash Location</label>
                 <input type="text" id="location" name="location" class="form-control" placeholder="Enter location" required>
             </div>
             <div class="form-group">
-                <label for="checkout_time">Check Out Time</label>
+                <label for="checkout_time">Car Wash Time</label>
                 <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
             </div>
             <div class="form-group">
-                <label for="phone_number">Phone Number</label>
+                <label for="phone_number">Your Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
             </div>
             <div class="button-group mt-4">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <!-- Pay by Cash as a link -->
-                <a href="#" class="pp-HN6B2Z3A5W4FL">Pay by Cash</a>
+                <a href="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5" class="pp-HN6B2Z3A5W4FL">Pay by Cash</a>
             </div>
         </form>
         <br>
