--- a/teste.html
+++ b/teste.html
@@ -85,7 +85,7 @@
         <h2 class="text-center mb-4">Socorro Car Wash Form</h2>
         <form method="post" action="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5">
             <div class="form-group">
-                <label for="checkin_date">Car Wash Date</label>
+                <label for="checkin_date" class="required">Car Wash Date</label>
                 <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
             </div>
             <div class="form-group">
@@ -97,7 +97,7 @@
                 <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
             </div>
             <div class="form-group">
-                <label for="phone_number">Your Phone Number</label>
+                <label for="phone_number" class="required">Your Phone Number</label>
                 <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
             </div>
             <div class="button-group mt-4">
