--- a/teste.html
+++ b/teste.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Location and Time Form with Pay by Cash Link</title>
+    <title>Recurring Payment Form</title>
     <!-- Bootstrap CSS for styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Flatpickr CSS for time picker -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -28,7 +26,7 @@
             font-weight: 600;
             margin-bottom: 0.5rem;
         }
-        .flatpickr-input {
+        .form-control {
             width: 100%;
             padding: 0.375rem 0.75rem;
             font-size: 1rem;
@@ -39,7 +37,7 @@
             border-radius: 0.25rem;
             box-sizing: border-box;
         }
-        .flatpickr-input:focus {
+        .form-control:focus {
             border-color: #80bdff;
             outline: 0;
             box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
@@ -54,7 +52,6 @@
             gap: 15px;
             flex-wrap: wrap;
         }
-        /* Pay by Cash button styling */
         .pp-HN6B2Z3A5W4FL {
             text-align: center;
             border: none;
@@ -69,67 +66,78 @@
             font-size: 1rem;
             line-height: 1.25rem;
             cursor: pointer;
-            display: inline-flex; /* Ensures text centering */
-            align-items: center; /* Vertically centers text */
-            justify-content: center; /* Horizontally centers text */
-            text-decoration: none; /* Removes underline from link */
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
         }
         .pp-HN6B2Z3A5W4FL:hover {
-            background-color: #e6b800; /* Slightly darker yellow on hover */
+            background-color: #e6b800;
             color: #000000;
         }
     </style>
 </head>
 <body>
     <div class="form-container">
-        <h2 class="text-center mb-4">Socorro Car Wash Form</h2>
-        <form method="post" action="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5">
+        <h2 class="text-center mb-4">Recurring Payment Form</h2>
+        <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6">
+            <!-- Name Field -->
             <div class="form-group">
-                <label for="checkin_date" class="required">Car Wash Date</label>
-                <input type="text" id="checkin_date" name="checkin_date" class="form-control" placeholder="Select date">
+                <label for="name" class="required">Name</label>
+                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
             </div>
+
+            <!-- Email Field -->
             <div class="form-group">
-                <label for="location" class="required">Car Wash Location</label>
-                <input type="text" id="location" name="location" class="form-control" placeholder="Enter location" required>
+                <label for="email" class="required">Email</label>
+                <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
             </div>
+
+            <!-- BTC Address Field -->
             <div class="form-group">
-                <label for="checkout_time">Car Wash Time</label>
-                <input type="text" id="checkout_time" name="checkout_time" class="form-control" placeholder="Select time">
+                <label for="btc_address" class="required">BTC Address</label>
+                <input type="text" id="btc_address" name="btc_address" class="form-control" placeholder="Enter your BTC address" required>
             </div>
+
+            <!-- Recurrence Frequency Dropdown -->
             <div class="form-group">
-                <label for="phone_number" class="required">Your Phone Number</label>
-                <input type="tel" id="phone_number" name="phone_number" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" title="Please enter a 10-digit phone number">
+                <label for="recurrence">Recurrence Frequency</label>
+                <select id="recurrence" name="recurrence" class="form-control">
+                    <option value="daily">Every Day</option>
+                    <option value="weekly">Every Week</option>
+                    <option value="monthly">Every Month</option>
+                </select>
             </div>
+
+            <!-- Day of Week Dropdown -->
+            <div class="form-group">
+                <label for="day_of_week">Day of Recurrence</label>
+                <select id="day_of_week" name="day_of_week" class="form-control">
+                    <option value="monday">Monday</option>
+                    <option value="tuesday">Tuesday</option>
+                    <option value="wednesday">Wednesday</option>
+                    <option value="thursday">Thursday</option>
+                    <option value="friday">Friday</option>
+                    <option value="saturday">Saturday</option>
+                    <option value="sunday">Sunday</option>
+                </select>
+            </div>
+
+            <!-- Buttons -->
             <div class="button-group mt-4">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <!-- Pay by Cash as a link -->
-                <a href="https://forms.un-static.com/forms/d5e5870cd1cc88dc75a96fe4593b496243fe64b5" class="pp-HN6B2Z3A5W4FL">Pay by Cash</a>
+                <a href="https://www.paypal.com/ncp/payment/HN6B2Z3A5W4FL?return=https%3A%2F%2Fyourusername.github.io%2Frepo-name%2F" class="pp-HN6B2Z3A5W4FL" id="pay-by-cash">Pay by Cash</a>
             </div>
         </form>
-        <br>
-        <center><img src="https://www.paypalobjects.com/images/Debit_Credit_APM.svg" alt="cards" />
-        <section>Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;" /></center>
     </div>
 
-    <!-- jQuery -->
+    <!-- jQuery (kept for potential future use) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Flatpickr JS -->
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
         $(document).ready(function() {
-            $("#checkin_date").flatpickr({
-                dateFormat: "Y-m-d",
-                minDate: "today"
-            });
-            $("#checkout_time").flatpickr({
-                enableTime: true,
-                noCalendar: true,
-                dateFormat: "H:i",
-                time_24hr: true
-            });
-            // No submit handler; form submits to the specified action
+            // No dynamic logic needed yet; form submits directly
         });
     </script>
 </body>
