--- a/teste.html
+++ b/teste.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="form-container">
-        <img src="img/btc.jpg" loading="lazy" alt=""class="feature-image">
+        <img src="img/shizload-BTC-sale.png" loading="lazy" alt=""class="feature-image">
         <h2 class="text-center mb-4">RECURRING CRYPTO SAVINGS</h2>
         <p class="text-center mb-4">Join our recurring BTC savings program and effortlessly stack Bitcoin straight to your personal BTC address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
         <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6" id="btc-form">
