--- a/teste.html
+++ b/teste.html
@@ -80,7 +80,7 @@
     <div class="form-container">
         <center><img src="img/shizload-BTC-sale.png" loading="lazy" alt=""class="feature-image"></center>
         <h2 class="text-center mb-4">RECURRING CRYPTO SAVINGS</h2>
-        <p class="text-center mb-4">Join our recurring BTC savings program and effortlessly stack Bitcoin straight to your personal BTC address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
+        <p class="text-center mb-4">Join our recurring crypto savings program and effortlessly stack your favorite crypto straight to your personal cold storage address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
         <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6" id="btc-form">
             <div class="form-group">
                 <label for="name" class="required">Name</label>
