--- a/teste.html
+++ b/teste.html
@@ -83,8 +83,8 @@
         <p class="text-center mb-4">Join our recurring crypto savings program and effortlessly stack your favorite crypto straight to your personal cold storage address! Simply make your payments in USD, and every 60 days after each payment, we’ll convert your funds to BTC and send them directly to your wallet—secure, simple, and built for the long haul.</p>
         <form method="post" action="https://forms.un-static.com/forms/20498b1a2650cc2e25d22b39d309bac55c735de6" id="btc-form">
             <div class="form-group">
-                <label for="name" class="required">Name</label>
-                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name"
             </div>
             <div class="form-group">
                 <label for="email" class="required">Email</label>
