--- a/testee.html
+++ b/testee.html
@@ -33,4 +33,26 @@
     <p><small>(Powered by <a rel="nofollow" href="Un-static Forms">Un-static Forms</a>)</small></p>
   </div>
 </form>
+
+  <div id="paypal-button-container-P-5SJ03354889479801M7N2CAY"></div>
+<script src="https://www.paypal.com/sdk/js?client-id=ATSlZ_s5NDMSbPeJ2GdRSwt_HD7iQ-no1GJCiDPHrvNVVXGBl6gGtARA-hgZSJYngsYH-7oj8hghcutb&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+<script>
+  paypal.Buttons({
+      style: {
+          shape: 'rect',
+          color: 'gold',
+          layout: 'vertical',
+          label: 'subscribe'
+      },
+      createSubscription: function(data, actions) {
+        return actions.subscription.create({
+          /* Creates the subscription */
+          plan_id: 'P-5SJ03354889479801M7N2CAY'
+        });
+      },
+      onApprove: function(data, actions) {
+        alert(data.subscriptionID); // You can add optional success message for the subscriber here
+      }
+  }).render('#paypal-button-container-P-5SJ03354889479801M7N2CAY'); // Renders the PayPal button
+</script>
 </html>
